Change the crawl button icon from 'search' to 'download' and change caption too

--- a/src/TumblThree/TumblThree.Presentation/Views/CrawlerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/CrawlerView.xaml
@@ -171,9 +171,9 @@
                 <Button Command="{Binding CrawlerService.CrawlCommand}">
                     <StackPanel>
                         <Grid>
-                            <fa:ImageAwesome Icon="Search" />
+                            <fa:ImageAwesome Icon="Download" />
                         </Grid>
-                        <TextBlock Text="{x:Static p:Resources.Crawl}" />
+                        <TextBlock Text="{x:Static p:Resources.Download}" />
                     </StackPanel>
                 </Button>
 
