Add issue #135 New column showing number of newly downloaded items since last run
- Sometimes it's interesting to know how many items have been downloaded on the last run.
- A new column is added to the blog list for showing that number. The number is reset on every run and not persisted across sessions.

--- a/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
@@ -126,6 +126,15 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                <DataGridTextColumn x:Name="DownloadedItemsNew" Header="{x:Static p:Resources.DownloadedItemsNew}"
+                                    Binding="{Binding DownloadedItemsNew, Converter={StaticResource IntToDisplayValueConverter}}"
+                                    IsReadOnly="True" Width="SizeToHeader">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextCellElementStyle}">
+                            <Setter Property="HorizontalAlignment" Value="Right" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn x:Name="TotalCount" Header="{x:Static p:Resources.NumberOfDownloadableItems}"
                                     Binding="{Binding TotalCount, Converter={StaticResource IntToDisplayValueConverter}}"
                                     IsReadOnly="True" Width="SizeToHeader">
